# gelixrs

./: .gitignore  .travis.yml  Cargo.toml  README.md  generate_native_bin.sh  min.gel  t  test-snapshot  test.gel  testing.gel
.github/workflows/: clippy.yml  test.yml
common/: Cargo.toml
common/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast-generator/: Cargo.toml  nodes.ron
crates/common/: Cargo.toml
crates/e2etest/: Cargo.toml  test-snapshot
crates/e2etest/src/: test.rs
crates/error/: Cargo.toml
crates/gelixrs/: Cargo.toml
crates/gelixrs-cli/: Cargo.toml
crates/gelixrs-cli/src/: main.rs
crates/gelixrs/src/: lib.rs  parse_stage.rs
crates/gir-generator/: Cargo.toml
crates/gir-generator/src/: expr.rs  intrinsics.rs  lib.rs  resolver.rs  result.rs  types.rs
crates/gir-generator/src/passes/: declare.rs  fields.rs  generate.rs  import.rs  intrinsic_methods.rs  intrinsics.rs  methods.rs  mod.rs
crates/gir-ir-adapter/: Cargo.toml
crates/gir-nodes/: Cargo.toml
crates/gir-nodes/src/: declaration.rs  expression.rs  iface_impls.rs  lib.rs  literal.rs  module.rs  printer.rs  types.rs  visitor.rs
crates/ir/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: declaration.rs  expression.rs  lib.rs  nodes.rs
crates/parser/src/util/: builder.rs  event.rs  mod.rs  sink.rs  source.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: kind.rs  lib.rs
docs/: basic-gelix-examples.gelix  book.toml  gelix-grammar.md  gelix-syntax-examples.gelix  test.gel
docs/src/: SUMMARY.md  appendix.md  basics.md  classes.md  closures.md  compiler-diagram.drawio  compiler.md  control_flow.md  custom_types.md  enums.md  ffi.md  first_program.md  functions_advanced.md  gelixrs.drawio  gen_markers.md  generics.md  getting_started.md  if.md  install.md  interfaces.md  loop.md  memory.md  modules.md  native_types.md  nullable.md  operators.md  packages.md  packages_modules.md  types.md  welcome.md  when.md
error/: Cargo.toml
error/src/: lib.rs
examples/: classes.gelix  expr.gelix  te.gelix  testing.gelix
gelixrs/: Cargo.toml
gelixrs-cli/: Cargo.toml
gelixrs-cli/src/: main.rs
gelixrs/src/: lib.rs
gir/: Cargo.toml
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
parser/: Cargo.toml
parser/src/: declaration.rs  expression.rs  lib.rs
src/: bench.rs  error.rs  lib.rs  main.rs  option.rs  parser.rs  tests.rs  token.rs  tokenizer.rs
src/ast/: declaration.rs  expression.rs  literal.rs  mod.rs  module.rs  statement.rs
src/codegen/: mod.rs  resolver.rs
src/gir/: mod.rs  printer.rs  result.rs
src/hir/: mod.rs  printer.rs  result.rs
src/ir/: adapter.rs  expr.rs  gc.rs  gen_expr.rs  intrinsics.rs  mod.rs  types.rs  values.rs
src/lexer/: mod.rs  token.rs
src/lir/: expr.rs  mod.rs  types.rs
src/mir/: builder.rs  generator.rs  mir.rs  mod.rs  nodes.rs  result.rs
src/parser/: helpers.rs  mod.rs  parser.rs  parsing.rs
std/: collections.gel  ffi.gel  intrinsics.gel  iter.gel  math.gel  memory.gel  ops.gel  prelude.gel  ptr.gel  string.gel
std/collections/: array.gel  module.gel
stdlib/: Cargo.toml  README.md
stdlib/src/: lib.rs
stdlib/std/: ffi.gel  intrinsics.gel  ops.gel  prelude.gel
syntax/: Cargo.toml
syntax/src/: language.rs
testing-mod/: main.gel  test.gel
testing_mod/: main.gel  test.gel
testing_mod/sub/: module.gel
tests/: deep_nest.gel  empty_file.gel  scoping.gel  scoping.gelixtest  unexpected_character.gel  unexpected_character.gelixtest  unicode.gel  unterminated_comment.gel
tests/arrays/: broken_literal.gel  broken_literal_2.gel  func_type.gel  indexing.gel  literals.gel  literals2.gel  nested.gel  no_leak.gel  no_premature_dealloc.gel  (+1 more)
(+399 files in other folders)
