[package]
name = "gelixrs"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
smol_str = "0.1.17"

ast = { path = "../ast" }
common = { path = "../common" }
error = { path = "../error" }
gir_generator = { path = "../gir-generator" }
ir = { path = "../ir" }
parser = { path = "../parser" }