[package]
name = "gir_generator"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.2.0"
num-traits = "0.2.14"
smol_str = "0.1.17"

ast = { path = "../ast" }
common = { path = "../common" }
error = { path = "../error" }
gir_nodes = { path = "../gir-nodes" }
syntax = { path = "../syntax" }