[package]
name = "gir_nodes"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
enum-methods = "0.0.8"
indexmap = "1.2.0"
smol_str = "0.1.17"

ast = { path = "../ast" }
common = { path = "../common" }
error = { path = "../error" }
gir_ir_adapter = { path = "../gir-ir-adapter" }
syntax = { path = "../syntax" }