[package]
name = "parser"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.10.0"
common = { path = "../common" }
error = { path = "../error" }
lexer = { path = "../lexer" }
syntax = { path = "../syntax" }