[package]
name = "syntax"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.17"
num-traits = "0.2"
num-derive = "0.3"

lexer = { path = "../lexer" }